--- a/form.html
+++ b/form.html
@@ -4,6 +4,8 @@
 
 <head>
 	<title>Tax Benefit Calculator | Arvorie</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles.css">
 </head>
 
