--- a/form.html
+++ b/form.html
@@ -29,35 +29,35 @@
 			<div class="section-grid">
 				<div>
 					<div class="content-label mb12">New York</div>
-					<input id="NY" type="number" class="input-text" value="0" onblur="soma()">
+					<input id="NY" type="number" class="input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" onblur="if (this.value == '') { this.value = 0; } soma();">
 				</div>
 				<div>
 					<div class="content-label mb12">South Carolina</div>
-					<input id="SC" type="number" class="input-text" value="0" onblur="soma()">
+					<input id="SC" type="number" class="input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" onblur="if (this.value == '') { this.value = 0; } soma();">
 				</div>
 				<div>
 					<div class="content-label mb12">Mississipi</div>
-					<input id="MS" type="number" class="input-text" value="0" onblur="soma()">
+					<input id="MS" type="number" class="input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" onblur="if (this.value == '') { this.value = 0; } soma()">
 				</div>
 				<div>
 					<div class="content-label mb12">New Mexico</div>
-					<input id="NM" type="number" class="input-text" value="0" onblur="soma()">
+					<input id="NM" type="number" class="input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" onblur="if (this.value == '') { this.value = 0; } soma()">
 				</div>
 				<div>
 					<div class="content-label mb12">Kansas</div>
-					<input id="KS" type="number" class="input-text" value="0" onblur="soma()">
+					<input id="KS" type="number" class="input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" onblur="if (this.value == '') { this.value = 0; } soma()">
 				</div>
 				<div>
 					<div class="content-label mb12">Rhode Island</div>
-					<input id="RI" type="number" class="input-text" value="0" onblur="soma()">
+					<input id="RI" type="number" class="input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" onblur="if (this.value == '') { this.value = 0; } soma()">
 				</div>
 				<div>
 					<div class="content-label mb12">Other States</div>
-					<input id="OS" type="number" class="input-text" value="0" onblur="soma()">
+					<input id="OS" type="number" class="input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" onblur="if (this.value == '') { this.value = 0; } soma()">
 				</div>
 				<div>
 					<div class="content-total mb12">Total in the U.S.</div>
-					<input id="US" type="number" class="input-text" disabled>
+					<input id="US" type="number" class="input-text" value="0" disabled>
 				</div>
 			</div>
 		</div>
