--- a/webflow-form.html
+++ b/webflow-form.html
@@ -27,31 +27,31 @@
 			<div class="section-grid">
 				<div>
 					<div class="content-label mb4">New York</div>
-					<input id="employees_ny" type="number" class="input-text">
+					<input id="employees_ny" type="number" class="input-text" oninput="employees()">
 				</div>
 				<div>
 					<div class="content-label mb4">South Carolina</div>
-					<input id="employees_sc" type="number" class="input-text">
+					<input id="employees_sc" type="number" class="input-text" oninput="employees()">
 				</div>
 				<div>
 					<div class="content-label mb8">Mississipi</div>
-					<input id="employees_ms" type="number" class="input-text">
+					<input id="employees_ms" type="number" class="input-text" oninput="employees()">
 				</div>
 				<div>
 					<div class="content-label mb8">New Mexico</div>
-					<input id="employees_nm" type="number" class="input-text">
+					<input id="employees_nm" type="number" class="input-text" oninput="employees()">
 				</div>
 				<div>
 					<div class="content-label mb12">Kansas</div>
-					<input id="employees_ks" type="number" class="input-text">
+					<input id="employees_ks" type="number" class="input-text" oninput="employees()">
 				</div>
 				<div>
 					<div class="content-label mb12">Rhode Island</div>
-					<input id="employees_ri" type="number" class="input-text">
+					<input id="employees_ri" type="number" class="input-text" oninput="employees()">
 				</div>
 				<div>
 					<div class="content-label mb4">Other States</div>
-					<input id="employees_other" type="number" class="input-text">
+					<input id="employees_other" type="number" class="input-text" oninput="employees()">
 				</div>
 				<div>
 					<div class="content-total mb4">Total</div>
