--- a/form.html
+++ b/form.html
@@ -7,144 +7,144 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="section">
-	<div class="container">
+<div class="tbc-tbc-section">
+	<div class="tbc-tbc-container">
 
 <form id="" name="" data-name="" class="">
-	<div class="section-title">
+	<div class="tbc-tbc-section-title">
 		<div>Company Profile</div>
-		<div class="teste-container">
-			<label class="teste">
+		<div class="tbc-teste-container">
+			<label class="tbc-teste">
 				<input type="checkbox" checked>
-				<span class="teste-slider">
-					<span class="off">non-profit</span>
-					<span class="on">for profit</span>
+				<span class="tbc-teste-slider">
+					<span class="tbc-off">non-profit</span>
+					<span class="tbc-on">for profit</span>
 				</span>
 			</label>
 		</div>
 	</div>
-	<div class="section-container">
-		<div class="section-group">
-			<div class="content-title mb20">employees in</div>
-			<div class="section-grid">
+	<div class="tbc-section-container">
+		<div class="tbc-section-group">
+			<div class="tbc-content-title tbc-mb20">employees in</div>
+			<div class="tbc-section-grid">
 				<div>
-					<div class="content-label mb4">New York</div>
-					<input id="NY" type="number" class="input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" oninput="soma()" onblur="if (this.value == '') { this.value = 0; }">
+					<div class="tbc-content-label tbc-mb4">New York</div>
+					<input id="NY" type="number" class="tbc-input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" oninput="soma()" onblur="if (this.value == '') { this.value = 0; }">
 				</div>
 				<div>
-					<div class="content-label mb4">South Carolina</div>
-					<input id="SC" type="number" class="input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" oninput="soma()" onblur="if (this.value == '') { this.value = 0; }">
+					<div class="tbc-content-label tbc-mb4">South Carolina</div>
+					<input id="SC" type="number" class="tbc-input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" oninput="soma()" onblur="if (this.value == '') { this.value = 0; }">
 				</div>
 				<div>
-					<div class="content-label mb8">Mississipi</div>
-					<input id="MS" type="number" class="input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" oninput="soma()" onblur="if (this.value == '') { this.value = 0; }">
+					<div class="tbc-content-label tbc-mb8">Mississipi</div>
+					<input id="MS" type="number" class="tbc-input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" oninput="soma()" onblur="if (this.value == '') { this.value = 0; }">
 				</div>
 				<div>
-					<div class="content-label mb8">New Mexico</div>
-					<input id="NM" type="number" class="input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" oninput="soma()" onblur="if (this.value == '') { this.value = 0; }">
+					<div class="tbc-content-label tbc-mb8">New Mexico</div>
+					<input id="NM" type="number" class="tbc-input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" oninput="soma()" onblur="if (this.value == '') { this.value = 0; }">
 				</div>
 				<div>
-					<div class="content-label mb12">Kansas</div>
-					<input id="KS" type="number" class="input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" oninput="soma()" onblur="if (this.value == '') { this.value = 0; }">
+					<div class="tbc-content-label tbc-mb12">Kansas</div>
+					<input id="KS" type="number" class="tbc-input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" oninput="soma()" onblur="if (this.value == '') { this.value = 0; }">
 				</div>
 				<div>
-					<div class="content-label mb12">Rhode Island</div>
-					<input id="RI" type="number" class="input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" oninput="soma()" onblur="if (this.value == '') { this.value = 0; }">
+					<div class="tbc-content-label tbc-mb12">Rhode Island</div>
+					<input id="RI" type="number" class="tbc-input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" oninput="soma()" onblur="if (this.value == '') { this.value = 0; }">
 				</div>
 				<div>
-					<div class="content-label mb4">Other States</div>
-					<input id="OS" type="number" class="input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" oninput="soma()" onblur="if (this.value == '') { this.value = 0; }">
+					<div class="tbc-content-label tbc-mb4">Other States</div>
+					<input id="OS" type="number" class="tbc-input-text" value="0" onfocus="if (this.value == 0) { this.value = ''; }" oninput="soma()" onblur="if (this.value == '') { this.value = 0; }">
 				</div>
 				<div>
-					<div class="content-total mb4">Total in the U.S.</div>
-					<input id="US" type="number" class="input-text" value="0" disabled>
+					<div class="tbc-content-total tbc-mb4">Total in the U.S.</div>
+					<input id="US" type="number" class="tbc-input-text" value="0" disabled>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="section-title">
+	<div class="tbc-section-title">
 		<div>Benefit Coverage</div>
 	</div>
-	<div class="section-container">
-		<div class="section-group bb1">
-			<div class="content-title mb20">children age</div>
-			<div class="section-grid">
-				<div class="toggle-group">
-					<label class="toggle">
+	<div class="tbc-section-container">
+		<div class="tbc-section-group bb1">
+			<div class="tbc-content-title tbc-mb20">children age</div>
+			<div class="tbc-section-grid">
+				<div class="tbc-toggle-group">
+					<label class="tbc-toggle">
 						<input type="checkbox">
-						<span class="toggle-slider"></span>
+						<span class="tbc-toggle-slider"></span>
 					</label>
-					<label for="" class="content-label">0-5 years</label>
+					<label for="" class="tbc-content-label">0-5 years</label>
 				</div>
-				<div class="toggle-group">
-					<label class="toggle">
+				<div class="tbc-toggle-group">
+					<label class="tbc-toggle">
 						<input type="checkbox">
-						<span class="toggle-slider"></span>
+						<span class="tbc-toggle-slider"></span>
 					</label>
-					<label for="" class="content-label">6-13 years</label>
+					<label for="" class="tbc-content-label">6-13 years</label>
 				</div>
 			</div>
 		</div>
-		<div class="section-group">
-			<div class="content-title mb20">care type</div>
-			<div class="section-grid">
-				<div class="toggle-group">
-					<label class="toggle">
+		<div class="tbc-section-group">
+			<div class="tbc-content-title tbc-mb20">care type</div>
+			<div class="tbc-section-grid">
+				<div class="tbc-toggle-group">
+					<label class="tbc-toggle">
 						<input type="checkbox">
-						<span class="toggle-slider"></span>
+						<span class="tbc-toggle-slider"></span>
 					</label>
-					<label for="" class="content-label">Daycare</label>
+					<label for="" class="tbc-content-label">Daycare</label>
 				</div>
-				<div class="toggle-group">
-					<label class="toggle">
+				<div class="tbc-toggle-group">
+					<label class="tbc-toggle">
 						<input type="checkbox">
-						<span class="toggle-slider"></span>
+						<span class="tbc-toggle-slider"></span>
 					</label>
-					<label for="" class="content-label">Nanny</label>
+					<label for="" class="tbc-content-label">Nanny</label>
 				</div>
-				<div class="toggle-group">
-					<label class="toggle">
+				<div class="tbc-toggle-group">
+					<label class="tbc-toggle">
 						<input type="checkbox">
-						<span class="toggle-slider"></span>
+						<span class="tbc-toggle-slider"></span>
 					</label>
-					<label for="" class="content-label">Babysitter</label>
+					<label for="" class="tbc-content-label">Babysitter</label>
 				</div>
-				<div class="toggle-group">
-					<label class="toggle">
+				<div class="tbc-toggle-group">
+					<label class="tbc-toggle">
 						<input type="checkbox">
-						<span class="toggle-slider"></span>
+						<span class="tbc-toggle-slider"></span>
 					</label>
-					<label for="" class="content-label">Summer Camp</label>
+					<label for="" class="tbc-content-label">Summer Camp</label>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="section-title">
+	<div class="tbc-section-title">
 		<div>Employer Contribution</div>
 	</div>
-	<div class="section-container">
-		<div class="section-group bb1">
-			<div class="slider-group mb20">
-				<div class="content-title">per parent per month</div>
-				<div class="content-display">$ <span id="pppm"></span></div>
+	<div class="tbc-section-container">
+		<div class="tbc-section-group bb1">
+			<div class="tbc-slider-group tbc-mb20">
+				<div class="tbc-content-title">per parent per month</div>
+				<div class="tbc-content-display">$ <span id="pppm"></span></div>
 			</div>
-			<div class="slider-container mb12">
-				<input id="pppm-range" type="range" min="50" max="500" value="50" class="slider">
+			<div class="tbc-slider-container tbc-mb12">
+				<input id="pppm-range" type="range" min="50" max="500" value="50" class="tbc-slider">
 			</div>
-			<div class="caption-container">
+			<div class="tbc-caption-container">
 				<div>$ 50</div>
 				<div>$ 500</div>
 			</div>
 		</div>
-		<div class="section-group">
-			<div class="slider-group mb20">
-				<div class="content-title">share spent with daycare</div>
-				<div class="content-display"><span id="sswd"></span>%</div>
+		<div class="tbc-section-group">
+			<div class="tbc-slider-group tbc-mb20">
+				<div class="tbc-content-title">share spent with daycare</div>
+				<div class="tbc-content-display"><span id="sswd"></span>%</div>
 			</div>
-			<div class="slider-container mb12">
-				<input id="sswd-range" type="range" min="0" max="100" value="0" class="slider">
+			<div class="tbc-slider-container tbc-mb12">
+				<input id="sswd-range" type="range" min="0" max="100" value="0" class="tbc-slider">
 			</div>
-			<div class="caption-container">
+			<div class="tbc-caption-container">
 				<div>0%</div>
 				<div>100%</div>
 			</div>
