--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
 		<div>Company Profile</div>
 		<div class="tbc-teste-container">
 
-			<div class="tbc-toggle-group">
+			<div class="tbc-toggle-group hidden">
 				<label class="tbc-toggle">
 					<input id="not_for_profit" type="checkbox">
 					<span class="tbc-toggle-slider"></span>
